<resources>
    <string name="app_name">MVP</string>
    <string name="title_card_number">Number</string>
    <string name="title_card_holder">Holder</string>
    <string name="title_card_date">Date</string>
    <string name="title_card_cvv">CVV</string>
    <string name="action_send_card_data">Send</string>

    <string name="default_error">Input error</string>
    <string name="title_decision_ok">OK</string>
    <string name="title_decision_cancel">cancel</string>
    <string name="wait">Pleace, wait ...</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>
