<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16">

            <TextView
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_number"/>

            <by.yarik.task_mvp_credit_card.ui.EditTextView
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16"
                android:layout_marginTop="@dimen/margin_8" />

            <TextView
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_holder"/>

            <by.yarik.task_mvp_credit_card.ui.EditTextView
                android:id="@+id/et_card_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                app:allCaps="true"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_4"
                    android:layout_weight="1">

                    <TextView
                        style="@style/TextViewHeaderStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_card_date"/>

                    <by.yarik.task_mvp_credit_card.ui.EditTextView
                        android:id="@+id/et_card_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789/"
                        android:inputType="number"
                        android:maxLength="5"
                        app:textGravity="center"
                        android:layout_marginTop="@dimen/margin_8"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="1">

                    <TextView
                        style="@style/TextViewHeaderStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_card_cvv"/>

                    <by.yarik.task_mvp_credit_card.ui.EditTextView
                        android:id="@+id/et_card_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3"
                        app:textGravity="center"
                        android:layout_marginTop="@dimen/margin_8"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_send_card_data"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/action_send_card_data"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>